<resources>
    <string name="facebook_app_id">1074218286654056</string>
    <string name="fb_login_protocol_scheme">fb1074218286654056</string>
    <string name="app_name">Meatz</string>
    <string name="global_cant_connect">Can\'t Connect</string>
    <string name="global_tab_to_retry">Tap to retry</string>
    <string name="global_currency">%1$s KWD</string>
    <string name="currency">KWD</string>
    <string name="global_cancel">Cancel</string>
    <string name="global_clear">Clear</string>
    <string name="global_unavailable">Unavailable !</string>
    <string name="global_yes">Yes</string>
    <string name="global_underscore">_</string>
    <string name="network_check_connection">Couldn\'t reach server.\nPlease check your connection and try again.</string>
    <string name="network_server_unreachable">Something went wrong.\nPlease try again.</string>
    <string name="network_unexpected_response">Sorry. unexpected response from server.</string>
    <string name="network_service_error">Error code: %1$d\nError message: %2$s</string>
    <string name="network_no_connection_title">Internet Connection Failed</string>
    <string name="network_no_connection_msg">Sorry! Due to internet connection failed, so the application is not working. Please check the internet connection.</string>
    <string name="validation_empty_email">Please enter your email</string>
    <string name="validation_empty_password">Please enter your password</string>
    <string name="validation_empty_first_name">Please enter your first name</string>
    <string name="validation_empty_last_name">Please enter your last name</string>
    <string name="validation_empty_phone">Please enter your phone</string>
    <string name="validation_empty_confirmed_password">Please enter confirmed password</string>
    <string name="validation_invalid_password">Password  must be at least  8 characters  </string>
    <string name="validation_invalid_phone">Please enter a valid phone number (8 digits only)</string>
    <string name="validation_invalid_email">Please enter a valid email</string>
    <string name="validation_password_not_match">Confirmed password not match password</string>
    <string name="validation_terms_conditions">Please accept privacy policy and T&amp;C</string>
    <string name="base_ok">Ok</string>
    <string name="base_retry">Try again</string>
    <string name="base_restart_msg">Ready to update?</string>
    <string name="base_restart">Restart</string>
    <string name="lanauge_select_your_lanauge">Select your Language</string>
    <string name="language_arabic">عربي</string>
    <string name="language_english">English</string>
    <string name="ads_skip">Skip</string>
    <string name="main_home">Home</string>
    <string name="main_offers">Offers</string>
    <string name="main_myboxes">My Boxes</string>
    <string name="main_profile">Profile</string>
    <string name="main_settings">Settings</string>
    <string name="home_meat">Meat</string>
    <string name="home_fish">Fish</string>
    <string name="home_poultry">Poultry</string>
    <string name="home_restaurant">Restaurants</string>
    <string name="home_type_here">Type here</string>
    <string name="home_our_selection">Our Selection</string>
    <string name="home_trending_products">Trending Products</string>
    <string name="home_our_box">Our Boxes</string>
    <string name="home_view_all">View All</string>
    <string name="home_no_box_msg">There are no boxes added by the admin</string>
    <string name="home_view_cart">View Cart</string>
    <string name="home_persons">%1$s Persons</string>
    <string name="our_selection">Our Selection</string>
    <string name="our_boxes">Our Boxes</string>
    <string name="our_boxes_available">Available</string>
    <string name="box_details_add_to_cart">Add to Cart</string>
    <string name="box_details_cart">Cart</string>
    <string name="box_details_max_quantity">You have reached the maximum quantity for this product</string>
    <string name="box_details_cart_full">Your cart is Full from other store \n you have to clear it to add this item </string>
    <string name="box_details_item_unavailable">This item is unavailable now </string>
    <string name="search_shops">Shops</string>
    <string name="search_see_more">See More</string>
    <string name="search_items">Items</string>
    <string name="search_no_results">No Result Found!</string>
    <string name="search_results_shops"> Shops</string>
    <string name="search_results_items">Items</string>
    <string name="search_results_items_count"> Items</string>
    <string name="search_results_shops_count"> Shops</string>
    <string name="login">Login</string>
    <string name="login_email_address">Email Address</string>
    <string name="login_password">Password</string>
    <string name="login_forget_password">Forgot Password?</string>
    <string name="login_through">Login through</string>
    <string name="login_contiue_guest">Continue as guest</string>
    <string name="login_do_you_have_account">Don\'t have an account?</string>
    <string name="login_register_now"> <u>Register now</u></string>
    <string name="login_or">Or</string>
    <string name="login_social_failure">Login failed, please try again !</string>
    <string name="shop_details_filterby">Filter By</string>
    <string name="shop_details_sortby">Sort By</string>
    <string name="shop_details_newest">Newest</string>
    <string name="shop_details_price_low_high">Price (Low to High)</string>
    <string name="shop_details_price_high_low">Price (High to Low)</string>
    <string name="shop_details_items">Items</string>
    <string name="shop_details_item">Item</string>
    <string name="shops__details_no_products_found">There are no Products </string>
    <string name="shop_details_zero_items">No items</string>
    <string name="shop_details_submit">Submit</string>
    <string name="register">Register</string>
    <string name="register_first_name">First Name</string>
    <string name="register_last_name">Last Name</string>
    <string name="register_email">Email Address</string>
    <string name="register_phone_number">Phone Number</string>
    <string name="register_password">Password</string>
    <string name="register_confirm_password">Confirm Password</string>
    <string name="register_accept">I accept all</string>
    <string name="register_privacy_policies">privacy policies and \n</string>
    <string name="register_terms_conditions">terms &amp; conditions of Meatz</string>
    <string name="register_have_account">Already have an account?</string>
    <string name="register_sign_in"><u>Signin</u></string>
    <string name="register_or">or</string>
    <string name="register_confirmation">Confirmation</string>
    <string name="register_successfully_registered">You have successfully registered !</string>
    <string name="forgot_password">Forgot password</string>
    <string name="forgot_password_msg">Please enter the email address which you registered here</string>
    <string name="forgot_password_email">Email Address</string>
    <string name="forgot_password_send">Send Password</string>
    <string name="forgot_password_dialog_msg">We sent an reset password link On your entered email address</string>
    <string name="forgot_password_sent">Password sent</string>
    <string name="shops_no_found">There are no Shops </string>
    <string name="category_shops_available">%1$s Shop available</string>
    <string name="profile_my_wallet">My Wallet</string>
    <string name="profile_edit_profile">Edit Profile</string>
    <string name="profile_myorders">My Orders</string>
    <string name="profile_wishlist">Wishlist</string>
    <string name="profile_my_address">My Address</string>
    <string name="profile_change_password">Change Password</string>
    <string name="profile_delete_account">Delete Account</string>
    <string name="profile_logout">Logout</string>
    <string name="profile_Delete">Delete Account</string>
    <string name="profile_logout_dialog_msg">Are you sure you want to logout ?</string>
    <string name="profile_delete_dialog_msg">Are you sure you want to Delete the account ?</string>
    <string name="profile_login_first_msg">You have to login first to perform this action !</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_profile_update">Update</string>
    <string name="edit_profile_first_name">First Name</string>
    <string name="edit_profile_last_name">Last Name</string>
    <string name="edit_profile_phone">Phone Number</string>
    <string name="edit_profile_profile_update">Profile Updated</string>
    <string name="edit_profile_dialog_msg">Your Profile has been \n Successfully updated.</string>
    <string name="edit_profile_ok">Ok</string>
    <string name="change_password">Change Password</string>
    <string name="change_password_old_password">Old Password</string>
    <string name="change_password_new_password">New Password</string>
    <string name="change_password_confirm_new_password">Confirm New Password</string>
    <string name="change_password_update">Password Changed</string>
    <string name="change_password_dialog_msg">Your password has bee changed\n Successfully</string>
    <string name="change_password_old_pass_empty">Please enter old password</string>
    <string name="change_password_new_pass_empty">Please enter new password</string>
    <string name="change_password_confirmed_new_pass_empty">Please enter new confirmed password</string>
    <string name="wishlist">Wishlist</string>
    <string name="wishlist_remove_item">Remove item</string>
    <string name="wishlist_dialog_msg">Are you sure want to remove \n Item from Wishlist ?</string>
    <string name="wishlist__details_no_products_found">There are no Products </string>
    <string name="myaddress">My Address</string>
    <string name="myaddress_saved_address">Saved Addresses</string>
    <string name="myaddress_edit">Edit</string>
    <string name="myaddress_add_new_address">Add New Address</string>
    <string name="myaddress_no_address_found">No Address Found!</string>
    <string name="myaddress_no_address_msg">There are no address in address book \n Please add address</string>
    <string name="myaddress_block">BLOCK</string>
    <string name="myaddress_street">STREET</string>
    <string name="myaddress_building">BUILDING</string>
    <string name="myaddress_floor">FLOOR</string>
    <string name="myaddress_delete_address">Delete Address</string>
    <string name="myaddress_delete_address_msg">Are you sure want to remove\n Address from address book.</string>
    <string name="add_address">Add Address</string>
    <string name="edit_address">Edit Address</string>
    <string name="contactus">Contact Us</string>
    <string name="contactus_send_message">Send us a message</string>
    <string name="contactus_send">Send</string>
    <string name="contactus_name">Name*</string>
    <string name="contactus_email">Email Address*</string>
    <string name="contactus_phone">Phone Number*</string>
    <string name="contactus_message">Message*</string>
    <string name="contactus_contact_whatsapp">Contact Us on Whatsapp</string>
    <string name="cart_continue_shopping">Continue Shopping</string>
    <string name="cart_continue_as_guest">Continue as a guest</string>
    <string name="cart_sign_in">Sign in</string>
    <string name="cart_add_phone_number">Add Phone Number</string>
    <string name="cart_phone_number">Phone Number*</string>
    <string name="cart_add">Add</string>
    <string name="cart_cancel">Cancel</string>
    <string name="payment_completed">Payment Completed</string>
    <string name="payment_success">Successfully</string>
    <string name="order_number">Your Order Number Is</string>
    <string name="thanks_message">Thank you for choosing us and we hope you will have a delicious and unique experience</string>
    <string name="back_to_home">Back To Home Page</string>
</resources>