<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:checked="true"
        android:icon="@drawable/ic_home"
        android:title="@string/main_home" />

    <item
        android:id="@+id/offersFragment"
        android:icon="@drawable/ic_offers"
        android:title="@string/main_offers" />

    <item
        android:id="@+id/myBoxesFragment"
        android:icon="@drawable/ic_myboxes"
        android:title="@string/main_myboxes" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/main_profile" />

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/main_settings" />
</menu>