<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_20sdp"
    android:background="@drawable/bg_alert_dialog"
    android:backgroundTint="@color/white"
    android:gravity="center_horizontal"
    android:minWidth="@dimen/_210sdp"
    android:orientation="vertical"
    android:paddingBottom="@dimen/_18sdp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivClose"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:padding="@dimen/_3sdp"
        android:layout_gravity="end"
        android:layout_margin="@dimen/_10sdp"
        android:tint="@color/selectedRed"
        app:srcCompat="@drawable/ic_close" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_5sdp"
        android:text="@string/shop_details_sortby"
        android:textAlignment="center"
        android:textColor="@color/heavy_metal"
        android:textSize="@dimen/_14ssp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rgSort"
        android:layout_marginStart="@dimen/_10sdp"
        android:orientation="vertical">


        <androidx.appcompat.widget.AppCompatRadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbNewest"
            android:text="@string/shop_details_newest"
            android:button="@drawable/bg_radiobtn_sort"
            android:paddingHorizontal="@dimen/_10sdp"
            android:textColor="@drawable/text_color_filter_cb" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbPriceLowToHigh"
            android:button="@drawable/bg_radiobtn_sort"
            android:text="@string/shop_details_price_low_high"
            android:paddingHorizontal="@dimen/_10sdp"
            android:textColor="@drawable/text_color_filter_cb" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:layout_width="wrap_content"
            android:id="@+id/rbPriceHighToLow"
            android:layout_height="wrap_content"
            android:text="@string/shop_details_price_high_low"
            android:button="@drawable/bg_radiobtn_sort"
            android:paddingHorizontal="@dimen/_10sdp"
            android:textColor="@drawable/text_color_filter_cb" />

    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@drawable/bg_merlot_default_btn"
        android:minWidth="@dimen/_100sdp"
        android:stateListAnimator="@null"
        android:text="@string/shop_details_submit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp" />


</androidx.appcompat.widget.LinearLayoutCompat>