<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/_20sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dashedView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_dashed"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_20sdp"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgStatus"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_height="@dimen/_200sdp"
            android:src="@drawable/ic_order_successfully"
            android:tint="@color/selectedRed"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tvPaymentStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:textAlignment="center"
            android:text="@string/payment_completed"
            app:layout_constraintTop_toBottomOf="@+id/imgStatus"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/heavy_metal"/>

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/payment_success"
            app:layout_constraintTop_toBottomOf="@+id/tvPaymentStatus"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            android:textColor="@color/success"/>


        <TextView
            android:id="@+id/tvOrderNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/order_number"
            app:layout_constraintTop_toBottomOf="@+id/tvStatus"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            android:textColor="@color/heavy_metal"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/dashedView"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/thanks_message"
        android:textSize="@dimen/_13sdp"
        android:textColor="@color/heavy_metal"
        android:textAlignment="center"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_44sdp"
        app:layout_constraintTop_toBottomOf="@id/tvDescription"
        app:cardBackgroundColor="@color/heavy_metal"
        app:cardCornerRadius="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:id="@+id/reservationCard"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvBackToHome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/back_to_home"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>