<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/_200sdp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_20sdp"
    android:background="@drawable/bg_alert_dialog"
    android:backgroundTint="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="@dimen/_8sdp"
    android:paddingBottom="@dimen/_8sdp">


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnContinueShopping"
        android:layout_width="@dimen/_190sdp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/bg_merlot_default_btn"
        android:stateListAnimator="@null"
        android:text="@string/cart_continue_shopping"
        android:textAllCaps="false"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        android:textColor="@color/black" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnContinueGuest"
        android:layout_width="@dimen/_190sdp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/bg_merlot_default_btn"
        android:stateListAnimator="@null"
        android:text="@string/cart_continue_as_guest"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="@color/black" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignIn"
        android:layout_width="@dimen/_190sdp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/bg_lightgrey_btn"
        android:stateListAnimator="@null"
        android:text="@string/cart_sign_in"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="@color/black" />


</androidx.appcompat.widget.LinearLayoutCompat>