<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_20sdp"
    android:background="@drawable/bg_alert_dialog"
    android:backgroundTint="@color/white"
    android:gravity="center_horizontal"
    android:minWidth="@dimen/_210sdp"
    android:orientation="vertical"
    android:paddingBottom="@dimen/_25sdp">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:text="@string/cart_add_phone_number"
        android:textAlignment="center"
        android:textColor="@color/heavy_metal"
        android:textSize="@dimen/_14ssp" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/bg_edittext_editinfo"
        android:hint="@string/cart_phone_number"
        android:inputType="phone"
        android:padding="@dimen/_8sdp"
        android:textAlignment="viewStart"
        android:textColor="@color/heavy_metal"
        android:textColorHint="@color/heavy_metal"
        android:textSize="@dimen/_11ssp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25sdp"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:background="@color/transparent"
            android:minWidth="@dimen/_90sdp"
            android:stateListAnimator="@null"
            android:text="@string/cart_cancel"
            android:textAllCaps="false"
            android:textColor="@color/heavy_metal"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/bg_merlot_default_btn"
            android:minWidth="@dimen/_90sdp"
            android:stateListAnimator="@null"
            android:text="@string/cart_add"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>